@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: iTermApplicationDelegate.m,v 1.45 2006-11-01 05:21:49 yfabian Exp $
+// $Id: iTermApplicationDelegate.m,v 1.46 2006-11-03 05:27:25 yfabian Exp $
 /*
  **  iTermApplicationDelegate.m
  **
@@ -61,11 +61,11 @@ static BOOL usingAutoLaunchScript = NO;
     Gestalt(gestaltSystemVersion, &gSystemVersion);
     if(gSystemVersion < 0x1020)
     {
-	NSRunAlertPanel(NSLocalizedStringFromTableInBundle(@"Sorry",@"iTerm", [NSBundle bundleForClass: [iTermController class]], @"Sorry"),
-		 NSLocalizedStringFromTableInBundle(@"Minimum_OS", @"iTerm", [NSBundle bundleForClass: [iTermController class]], @"OS Version"),
-		NSLocalizedStringFromTableInBundle(@"Quit",@"iTerm", [NSBundle bundleForClass: [iTermController class]], @"Quit"),
-		 nil, nil);
-	[NSApp terminate: self];
+		NSRunAlertPanel(NSLocalizedStringFromTableInBundle(@"Sorry",@"iTerm", [NSBundle bundleForClass: [iTermController class]], @"Sorry"),
+			 NSLocalizedStringFromTableInBundle(@"Minimum_OS", @"iTerm", [NSBundle bundleForClass: [iTermController class]], @"OS Version"),
+			NSLocalizedStringFromTableInBundle(@"Quit",@"iTerm", [NSBundle bundleForClass: [iTermController class]], @"Quit"),
+			 nil, nil);
+		[NSApp terminate: self];
     }
 
     // set the TERM_PROGRAM environment variable
